fix overflow x on body

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -7,5 +7,8 @@
   h1 {
     margin: auto;
   }
+
+  button {
+  }
 }
 
