--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -5,4 +5,5 @@ body {
   margin: 0;
   padding: 0;
   max-width: 100vw;
+  overflow-x: hidden;
 }
